[package]
name = "nnew"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.2.2"
anyhow = "1.0"
rand = "0.8"
ethers-core = "0.2.2"
ethers-signers = "0.2.2"
tokio = { version = "1.0", features = ["full"] }